# IGATO

./: .gitignore  CMakeLists.txt  README.md
api/: IGATO_Doxyfile  RunDoxygen.bat
api/html/: _astro_kit_test_main_8cpp.html  _astro_kit_test_main_8cpp.js  _base_8h.html  _base_8h.js  _base_8h_source.html  _igato_core_test_main_8cpp.html  _igato_core_test_main_8cpp.js  _main_8cpp.html  _orbit_8cpp.html  _orbit_8h.html  _orbit_8h_source.html  _orbit_test_8cpp.html  _orbit_test_8cpp.js  _transformation_8cpp.html  _transformation_8cpp.js  _transformation_8h.html  _transformation_8h.js  _transformation_8h_source.html  _transformation_test_8cpp.html  _transformation_test_8cpp.js  _utility_8cpp.html  _utility_8cpp.js  _utility_8h.html  _utility_8h.js  _utility_8h_source.html  annotated.html  annotated.js  astro__kit__test_2src_2_main_test_8cpp.html  astro__kit__test_2src_2_main_test_8cpp.js  class_orbit-members.html  class_orbit.html  class_orbit.js  class_orbit_test-members.html  class_orbit_test.html  class_orbit_test.js  class_transformation_test-members.html  class_transformation_test.html  class_transformation_test.js  classes.html  files.html  (+22 more)
api/html/search/: all_5f.js  all_61.js  all_63.js  all_64.js  all_65.js  all_67.js  all_69.js  all_6d.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_77.js  all_7e.js  classes_63.js  classes_6f.js  classes_73.js  classes_74.js  defines_6e.js  enums_73.js  enumvalues_63.js  files_61.js  files_69.js  files_6f.js  files_74.js  (+17 more)
lib/: astro_kit.lib  astro_kitd.lib  igato_core.lib  igato_cored.lib
sln/msvc/: igato.sln
(+50 files in other folders)
